--- a/other.html
+++ b/other.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset = "utf-8">
   <title>ITMD-361 Internet Technologies and Web Design</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
   <nav>
