--- a/resume.html
+++ b/resume.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset = "UTF-8">
   <title>ITMD-361 Internet Technologies and Web Design</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
   <nav>
