--- a/index.html
+++ b/index.html
@@ -6,23 +6,27 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <nav>
-    <strong>Index</strong> | <a href="resume.html">Resume Page</a> | <a href="other.html">Other</a>
-  </nav>
-  <section id="indexhead">
-    <h1>Christopher Siegfried ITMD 361 Projects</h1>
-	<h3>Project One</h3>
-	<p>From here you'll be able to navigate to the other pages. Hopefully.</p>
-	<img src="media/temp.png" alt="temp">
-  </section>
-  <section id= "ideas">
-    <h3>Here are a list of potential ideas</h3>
-	<ol>
-	  <li>Have it be about polls and gathering random info (from comments on basecamp)</li>
-	  <li>Have it be about one of the different games I play on a regular basis</li>
-	  <li>Have it be a generic outline that doesn't exactly display any real content but instead is a framework for websites to come later</li>
-	  <li>Have it be me learning to speedrun something (since that sounds fun)</li>
-    </ol>
-  </section>
+	<nav>
+		<ul>
+			<li><strong>Index</strong></li>
+			<li><a href="resume.html">Resume Page</a></li>
+			<li> <a href="other.html">Other</a></li>
+		</ul>
+	</nav>
+	<section id="indexhead">
+		<h1>Christopher Siegfried ITMD 361 Projects</h1>
+		<h3>Project One</h3>
+		<p>From here you'll be able to navigate to the other pages. Hopefully.</p>
+		<img src="media/temp.png" alt="temp">
+	</section>
+	<section id= "ideas">
+		<h3>Here are a list of potential ideas</h3>
+		<ol>
+			<li>Have it be about polls and gathering random info (from comments on basecamp)</li>
+			<li>Have it be about one of the different games I play on a regular basis</li>
+			<li>Have it be a generic outline that doesn't exactly display any real content but instead is a framework for websites to come later</li>
+			<li>Have it be me learning to speedrun something (since that sounds fun)</li>
+		</ol>
+	</section>
 </body>
 </html>
