made ul class navigation

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<nav>
-		<ul>
+		<ul class="navigation">
 			<li><strong>Index</strong></li>
 			<li><a href="resume.html">Resume Page</a></li>
 			<li> <a href="other.html">Other</a></li>
