removed strong and added active class

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 	<nav>
 		<ul class="navigation">
-			<li><strong>Index</strong></li>
+			<li class="active">Index<li>
 			<li><a href="resume.html">Resume Page</a></li>
 			<li> <a href="other.html">Other</a></li>
 		</ul>
