--- a/other.html
+++ b/other.html
@@ -7,7 +7,11 @@
 </head>
 <body>
   <nav>
-    <a href="index.html">Index</a> | <a href="resume.html">Resume Page</a> | <strong>Other</strong>
+	<ul class="navigation">
+		<li><a href="index.html">Index</a></li>
+		<li><a href="resume.html">Resume Page</a></li>
+		<li class="active">Other</li>
+	</ul>
   </nav>
   
   <section id="top">
