fixed navbar on resume

--- a/resume.html
+++ b/resume.html
@@ -6,8 +6,12 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<nav>
-		<a href="index.html">Index</a> | <strong>Resume Page</strong> | <a href="other.html">Other</a>
+	<nav> 
+		<ul class="navigation">
+			<li><a href="index.html">Index</a></li>
+			<li class="active">Resume Page</li>
+			<li><a href="other.html">Other</a></li>
+		</ul>
 	</nav>
 	<h1>Christopher Siegfried Resume</h1>
   
