changed id to class

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 			<li> <a href="other.html">Other</a></li>
 		</ul>
 	</nav>
-	<section id="indexleft">
+	<section class="indexbox">
 		<h1>Christopher Siegfried ITMD 361 Projects</h1>
 		<h3>Project One</h3>
 		<p>From here you'll be able to navigate to the other pages. Hopefully.</p>
 		<img src="media/temp.png" alt="temp">
 	</section>
-	<section id= "indexright">
+	<section class="indexbox">
 		<h3>Here are a list of potential ideas</h3>
 		<ol>
 			<li>Have it be about polls and gathering random info (from comments on basecamp)</li>
