--- a/index.html
+++ b/index.html
@@ -28,5 +28,11 @@
 			<li>Have it be me learning to speedrun something (since that sounds fun)</li>
 		</ol>
 	</section>
+	<section class="indexbox">
+		<h3>Here is another box</h3>
+		<p>The purpose of this box is yet to be defined, but I'm going to slap 
+		text-overflow on it to see if the example will work as desired.</p>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque commodo sodales justo vitae vehicula. Aliquam erat volutpat. Aliquam sed odio vel erat faucibus lobortis. Nullam venenatis dictum quam, vitae volutpat purus bibendum a. Integer quam augue, consequat non tempus at, congue at sapien. Integer lectus leo, feugiat at ipsum vitae, convallis ultricies risus. Phasellus a nisl vel neque interdum euismod. Etiam malesuada lacinia risus, in ornare velit semper eget. Mauris venenatis ultricies dolor nec rutrum. Praesent convallis aliquam mauris at viverra. Fusce tincidunt congue rutrum. Nam semper in mauris at viverra. Quisque congue ultricies maximus. Praesent vitae justo nunc. Integer vel lorem sollicitudin, accumsan arcu id, gravida lacus.</p>
+	</section>
 </body>
 </html>
