changed forced height

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			<li>Have it be me learning to speedrun something (since that sounds fun)</li>
 		</ol>
 	</section>
-	<section class="indexbox">
+	<section id="squished" class="indexbox">
 		<h3>Here is another box</h3>
 		<p>The purpose of this box is yet to be defined, but I'm going to slap 
 		text-overflow on it to see if the example will work as desired.</p>
