--- a/other.html
+++ b/other.html
@@ -19,12 +19,11 @@
 		<h3>Subject to change</h3>
 		<p>So, at the moment, we're just displaying the <strong>different</strong> and <em>interesting</em> tags.</p>
 	</section>
-  
-	<section id="table">
-		<h3>Site Layout</h3>
-		<table>
+	
+	<h3>Site Layout</h3>
+	<table>
 			<tr>
-				<th>Page</th>
+			<th>Page</th>
 				<th>Description</th>
 			</tr>
 			<tr>
@@ -37,15 +36,21 @@
 			</tr>
 			<tr>
 				<td>Bonus Section</td>
-				<td>Supports odds and ends until a more clear theme is introduced.</td>
+				<td>This table has a fixed position and blocks stuff.</td>
 			</tr>
 		</table>
-	</section>
 
 	<section id="vid">
 		<h3>Example media: Video I made however long ago</h3>
 		<iframe width="560" height="315" src="https://www.youtube.com/embed/SY9qYeZuOig" allowfullscreen></iframe>
 	</section>
+	
+	<p>This is here to test the fixed position of the table, so get prepared for a lot of test latin.
+	
+	Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque commodo sodales justo vitae vehicula. Aliquam erat volutpat. Aliquam sed odio vel erat faucibus lobortis. Nullam venenatis dictum quam, vitae volutpat purus bibendum a. Integer quam augue, consequat non tempus at, congue at sapien. Integer lectus leo, feugiat at ipsum vitae, convallis ultricies risus. Phasellus a nisl vel neque interdum euismod. Etiam malesuada lacinia risus, in ornare velit semper eget. Mauris venenatis ultricies dolor nec rutrum. Praesent convallis aliquam mauris at viverra. Fusce tincidunt congue rutrum. Nam semper in mauris at viverra. Quisque congue ultricies maximus. Praesent vitae justo nunc. Integer vel lorem sollicitudin, accumsan arcu id, gravida lacus
+	Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque commodo sodales justo vitae vehicula. Aliquam erat volutpat. Aliquam sed odio vel erat faucibus lobortis. Nullam venenatis dictum quam, vitae volutpat purus bibendum a. Integer quam augue, consequat non tempus at, congue at sapien. Integer lectus leo, feugiat at ipsum vitae, convallis ultricies risus. Phasellus a nisl vel neque interdum euismod. Etiam malesuada lacinia risus, in ornare velit semper eget. Mauris venenatis ultricies dolor nec rutrum. Praesent convallis aliquam mauris at viverra. Fusce tincidunt congue rutrum. Nam semper in mauris at viverra. Quisque congue ultricies maximus. Praesent vitae justo nunc. Integer vel lorem sollicitudin, accumsan arcu id, gravida lacus
+	Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque commodo sodales justo vitae vehicula. Aliquam erat volutpat. Aliquam sed odio vel erat faucibus lobortis. Nullam venenatis dictum quam, vitae volutpat purus bibendum a. Integer quam augue, consequat non tempus at, congue at sapien. Integer lectus leo, feugiat at ipsum vitae, convallis ultricies risus. Phasellus a nisl vel neque interdum euismod. Etiam malesuada lacinia risus, in ornare velit semper eget. Mauris venenatis ultricies dolor nec rutrum. Praesent convallis aliquam mauris at viverra. Fusce tincidunt congue rutrum. Nam semper in mauris at viverra. Quisque congue ultricies maximus. Praesent vitae justo nunc. Integer vel lorem sollicitudin, accumsan arcu id, gravida lacus
+	</p>
 
 </body>
 </html>
