--- a/resume.html
+++ b/resume.html
@@ -21,20 +21,20 @@
 		<p>csiegfri@hawk.iit.edu</p>
 	</section>
   
-	<section id="objective">
+	<section class="resumebox">
 		<h3>Objective:</h3>
 		<p>Currently seeking to gain more workplace experience and better myself as a person. I
 		plan on working as diligently as I can and on showing just how good of an asset I can be while
 		learning more about work environments and aspects of any potential job.</p>
 	</section>
   
-	<section id="education">
+	<section class="resumebox">
 		<h3>Education:</h3>
 		<p>Illinois Institute of Technology, Chicago, IL May 2019</p>
 		<p>Bachelors in Information Technology Management GPA: 3.33 / 4.0</p>
 	</section>
   
-	<section id="experience">
+	<section class="resumebox">
 		<h3>Experience:</h3>
 		<p><em>Sopko Insurance Agency, Steger. IL Aug 2014 – Aug 2015</em> Data Entry and Customer Service</p>
 		<ul>
@@ -49,7 +49,7 @@
 		</ul>
 	</section>
 
-	<section id="skills">
+	<section class="resumebox">
 		<h3>Skills:</h3>
 		<p>Computer OS: Windows 7, Windows 8/8.1, Windows 10</p>
 		<p>Programming Languages: Java, C, C++, Python, HTML-5</p>
