--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 	</nav>
 	<section class="indexbox">
 		<h1>Christopher Siegfried ITMD 361 Projects</h1>
-		<h3>Project One</h3>
-		<p>From here you'll be able to navigate to the other pages. Hopefully.</p>
+		<h3>Project Two</h3>
+		<p>We took project one and spiced it up a bit.</p>
 		<img src="media/temp.png" alt="temp">
 	</section>
 	<section class="indexbox">
