modified floating box

--- a/other.html
+++ b/other.html
@@ -20,26 +20,27 @@
 		<p>So, at the moment, we're just displaying the <strong>different</strong> and <em>interesting</em> tags.</p>
 	</section>
 	
-	<h3>Site Layout</h3>
-	<table>
-			<tr>
-			<th>Page</th>
-				<th>Description</th>
-			</tr>
-			<tr>
-				<td>Index</td>
+	<div>
+	  <h3>Site Layout</h3>
+	  <table>
+		  	  <tr>
+			  <th>Page</th>
+				  <th>Description</th>
+			  </tr>
+			  <tr>
+			   	<td>Index</td>
 				<td>Basic intro to the website</td>
-			</tr>
-			<tr>
+			  </tr>
+			  <tr>
 				<td>Resume</td>
 				<td>The resume I had on handshake</td>
-			</tr>
-			<tr>
+			  </tr>
+			  <tr>
 				<td>Bonus Section</td>
 				<td>This table has a fixed position and blocks stuff.</td>
-			</tr>
-		</table>
-
+			  </tr>
+ 	  </table>
+	</div>
 	<section id="vid">
 		<h3>Example media: Video I made however long ago</h3>
 		<iframe width="560" height="315" src="https://www.youtube.com/embed/SY9qYeZuOig" allowfullscreen></iframe>
